@@ -2,7 +2,9 @@
 
   1. Wire location through load, extract, and query jobs.
 
-  2. POM updates for GCS connector 1.6.5.
+  2. Always require at least 2 partitions for sharded exports.
+
+  3. POM updates for GCS connector 1.6.5.
 
 
 0.10.5 - 2018-03-19
